Fixed new item input box spacing

--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -318,7 +318,7 @@
                 font-size: 12px;
             }
         }
-        .kanban-item-text-container {
+        .kanban-item-text-container, .kanban-item-text {
             width: 100%;
             .tools_unselectable();
             cursor: text;
